--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "mongo": "/usr/local/opt/mongodb@3.4/bin/mongod --dbpath=data/db/",
     "start": "node index.js",
-    "test": "echo \\\"Error: no test specified\\\" && exit 1"
+    "test": "node test.js"
   },
   "repository": {
     "type": "git",
