--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "disconnect": "^1.2.1",
     "lodash": "^4.17.10",
-    "mongodb": "^3.1.1"
+    "mongodb": "^3.1.1",
+    "sleep": "^5.1.1"
   }
 }
